# userp

./: .gitignore  Cargo.toml  README.md  functions_later  license  readme.md  todo.md
.helix/: config.toml
examples/: .env.template
examples/askama/: Cargo.toml
examples/askama/src/: forms.rs  main.rs  mem.rs  store.rs  templates.rs
examples/askama/templates/: base.html  email-sent.html  email-verified.html  index.html  login.html  send-reset-password.html  signup.html  user.html
examples/leptos-axum/: Cargo.toml  README.md  tailwind.config.js
examples/leptos-axum/.cargo/: config.toml
examples/leptos-axum/.helix/: languages.toml
examples/leptos-axum/src/: app.rs  lib.rs  main.rs  models.rs  server.rs
examples/leptos-axum/src/server/: models.rs  store.rs
examples/leptos-axum/style/: tailwind.css
examples/leptos-basic/: Cargo.toml  README.md
examples/leptos-basic/src/: app.rs  lib.rs  main.rs  models.rs  models_1.rs  store.rs
examples/memory-store/: .env  Cargo.toml
examples/memory-store-oauth-only/: .env.template  Cargo.toml
examples/memory-store-oauth-only/src/: main.rs  models.rs  store.rs
examples/memory-store-password-only-no-templates/: Cargo.toml
examples/memory-store-password-only-no-templates/src/: main.rs  models.rs  store.rs  templates.rs
examples/memory-store-password-only-no-templates/templates/: index.html  signin.html
examples/memory-store/src/: main.rs  models.rs  store.rs
examples/memory-store/templates/: base.html  index.html
examples/minimal-pw-only/: Cargo.toml
examples/minimal-pw-only/src/: main.rs  models.rs  password.rs  store.rs
examples/minimal-pw-only/templates/: protected.html  signin.html
examples/psql-store/: .env.template  Cargo.toml  README.md  docker-compose.yml
examples/psql-store/migrations/: 20241020155651_init.sql
examples/psql-store/src/: main.rs  models.rs  store.rs  templates.rs
src/: auth.rs  axum.rs  axum_extract.rs  axum_router.rs  config.rs  constants.rs  core.rs  email.rs  enums.rs  lib.rs  main.rs  mem.rs  models.rs  oauth.rs  pages.rs  password.rs  prelude.rs  reexports.rs  router.rs  routes.rs  server.rs  templates.rs  traits.rs
src/axum/: cookies.rs  extract.rs  router.rs
src/axum/router/: account.rs  email.rs  oauth.rs  oauth_handlers.rs  pages.rs  password.rs
src/axum_router/: extended.rs  oauth_handlers.rs  queries.rs  templates.rs
src/email/: login.rs  reset.rs  signup.rs  verify.rs
src/models/: email.rs  oauth.rs  prelude.rs
src/oauth/: client.rs  link.rs  login.rs  provider.rs  providers.rs  refresh.rs  signup.rs
src/oauth/provider/: custom.rs  github.rs  gitlab.rs  google.rs  oidc.rs  spotify.rs  with_user_callback.rs
src/oauth/providers/: github.rs  spotify.rs
src/password/: hasher.rs  login.rs  signup.rs
src/router/: extended.rs  forms.rs  queries.rs  templates.rs
src/router/extended/: forms.rs
src/routes/: account.rs  email.rs  extended.rs  forms.rs  oauth.rs  pages.rs  password.rs  templates.rs
src/routes/oauth/: actions.rs  callbacks.rs
src/server/: axum.rs  config.rs  core.rs  email.rs  oauth.rs  pages.rs  password.rs  prelude.rs  reexports.rs  store.rs
src/server/axum/: extract.rs  router.rs
src/server/axum/router/: account.rs  oauth.rs  pages.rs
src/server/email/: login.rs  reset.rs  signup.rs  verify.rs
src/server/oauth/: client.rs  login.rs  provider.rs  refresh.rs  signup.rs
src/server/oauth/provider/: custom.rs  custom_old.rs  gitlab.rs  google.rs  oidc.rs  spotify.rs
src/server/password/: login.rs  signup.rs
src/traits/: store.rs
templates/: base.html  index.html  login.html  reset-password.html  send-reset-password.html  signup.html  user.html
userp/: Cargo.toml
userp-axum/: Cargo.toml
userp-axum-router/: Cargo.toml
userp-axum-router/src/: lib.rs  prelude.rs  router.rs
userp-axum-router/src/router/: account.rs  email.rs  oauth.rs  pages.rs  password.rs
userp-axum/src/: cookies.rs  extract.rs  lib.rs  router.rs
userp-axum/src/router/: account.rs  email.rs  pages.rs  password.rs
userp-client/: Cargo.toml  README.md
userp-client/src/: lib.rs  models.rs  prelude.rs  reexports.rs  routes.rs
userp-client/src/routes/: account.rs  email.rs  oauth.rs  pages.rs  password.rs
userp-client/src/routes/oauth/: actions.rs  callbacks.rs
userp-pages/: Cargo.toml
userp-pages/src/: lib.rs
userp-pages/templates/: base.html  reset-password.html  signup.html  user.html
userp-server/: Cargo.toml  README.md
userp-server/src/: axum.rs  config.rs  core.rs  email.rs  lib.rs  models.rs  oauth.rs  password.rs  prelude.rs  reexports.rs  store.rs
userp-server/src/axum/: cookies.rs  extract.rs
userp-server/src/email/: login.rs  reset.rs  signup.rs  verify.rs
userp-server/src/oauth/: client.rs  link.rs  login.rs  provider.rs  refresh.rs  signup.rs
userp-server/src/oauth/provider/: custom.rs  github.rs  oidc.rs
userp-server/src/password/: hasher.rs  login.rs  signup.rs
userp/src/: lib.rs  prelude.rs  reexports.rs
