[package]
name = "userp"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"

[dependencies]
thiserror = "1.0.64"
async-trait = "0.1.83"
axum = { version = "0.7.7", features = ["macros"], optional = true }
axum-extra = { version = "0.9.4", features = [
  "cookie-private",
], optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
anyhow = { version = "1.0.89", optional = true }
chrono = { version = "0.4.38", optional = true }
lettre = { version = "0.11.9", optional = true }
oauth2 = { version = "4.4.2", optional = true }
serde_json = { version = "1.0.128", optional = true }
url = { version = "2.5.2", optional = true }
reqwest = { version = "0.12.8", features = ["json"], optional = true }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
urlencoding = { version = "2.1.3", optional = true }
askama = { version = "0.12.1", optional = true }
askama_axum = { version = "0.4.0", optional = true }
password-auth = { version = "1.0.0", optional = true }
base64 = "0.22.1"

[features]
default = ["axum-router"]
axum-router = [
  "axum-router-pages",
  "axum-router-oauth",
  "axum-router-password",
  "axum-router-email",
  "axum-router-account",
]
axum-router-pages = [
  "pages",
  "askama/with-axum",
  "dep:askama_axum",
  "axum-extract",
  "dep:urlencoding",
]
axum-router-oauth = ["oauth-action-routes", "axum-router-oauth-callbacks"]
axum-router-oauth-callbacks = ["oauth", "axum-extract", "dep:urlencoding"]
axum-router-password = ["password", "axum-extract", "dep:urlencoding"]
axum-router-email = ["email", "axum-extract", "dep:urlencoding"]
axum-router-account = ["account", "axum-extract", "dep:urlencoding"]
axum-extract = ["dep:axum", "dep:axum-extra"]
account = []
email = ["dep:reqwest", "dep:chrono", "dep:lettre", "dep:url"]
password = ["dep:password-auth"]
pages = ["dep:askama"]
oauth = [
  "dep:chrono",
  "dep:oauth2",
  "dep:url",
  "dep:anyhow",
  "dep:serde_json",
  "dep:reqwest",
]
oauth-action-routes = ["oauth"]
