[package]
name = "userp"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"

[dependencies]
anyhow = { version = "1.0.89", optional = true }
askama = { version = "0.12.1", optional = true }
askama_axum = { version = "0.4.0", optional = true }
async-trait = { version = "0.1.83", optional = true }
axum = { version = "0.7.7", features = ["macros"], optional = true }
axum-extra = { version = "0.9.4", features = [
  "cookie-private",
], optional = true }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.38", optional = true, features = ["serde"] }
lettre = { version = "0.11.9", optional = true }
oauth2 = { version = "4.4.2", optional = true }
password-auth = { version = "1.0.0", optional = true }
reqwest = { version = "0.12.8", features = ["json"], optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", optional = true }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"], optional = true }
url = { version = "2.5.2", optional = true }
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[features]
default = ["axum-full"]

axum = ["dep:axum", "dep:axum-extra", "server"]
axum-full = [
  "axum-router-pages",
  "axum-router-oauth",
  "axum-router-password",
  "axum-router-email",
  "axum-router-account",
]
axum-router = ["axum", "dep:urlencoding"]
axum-router-pages = [
  "server-pages",
  "askama/with-axum",
  "dep:askama_axum",
  "axum-router",
]
axum-router-oauth = ["server-oauth", "axum-router-oauth-callbacks"]
axum-router-oauth-callbacks = ["server-oauth-callbacks", "axum-router"]
axum-router-password = ["server-password", "axum-router"]
axum-router-email = ["server-email", "axum-router"]
axum-router-account = ["server-account", "axum-router"]

client-full = [
  "client-account",
  "client-email",
  "client-password",
  "client-pages",
  "client-oauth",
]
client-account = []
client-email = ["dep:chrono"]
client-password = []
client-pages = [] # Unused
client-oauth-callbacks = ["dep:chrono", "dep:serde_json"]
client-oauth = ["client-oauth-callbacks"]

server = ["dep:tokio", "dep:async-trait"]
server-full = [
  "server-account",
  "server-email",
  "server-password",
  "server-pages",
  "server-oauth",
]
server-account = ["server", "client-account"]
server-email = [
  "server",
  "client-email",
  "dep:reqwest",
  "dep:lettre",
  "dep:url",
]
server-password = ["server", "client-password", "dep:password-auth"]
server-pages = ["server", "client-pages", "dep:askama"]
server-oauth-callbacks = [
  "server",
  "client-oauth-callbacks",
  "dep:oauth2",
  "dep:url",
  "dep:anyhow",
  "dep:reqwest",
  "dep:base64",
]
server-oauth = ["server-oauth-callbacks", "client-oauth"]
