[package]
name = "userp-axum-router"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.210", features = ["derive"] }
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
userp-client = { path = "../userp-client", default-features = false }
userp-server = { path = "../userp-server", default-features = false, features = [
  "axum",
] }
userp-pages = { path = "../userp-pages", optional = true, default-features = false, features = [
  "axum",
] }

[features]
default = ["pages", "oauth", "password", "email", "account"]
pages = ["userp-pages", "dep:urlencoding"]
oauth = [
  "userp-client/oauth",
  "userp-server/oauth",
  "oauth-callbacks",
  "userp-pages?/oauth",
]
oauth-callbacks = [
  "userp-client/oauth-callbacks",
  "userp-server/oauth-callbacks",
  "dep:urlencoding",
]
password = [
  "userp-client/password",
  "userp-server/password",
  "dep:urlencoding",
  "userp-pages?/password",
]
email = [
  "userp-client/email",
  "userp-server/email",
  "dep:urlencoding",
  "userp-pages?/email",
]
account = [
  "userp-client/account",
  "userp-server/account",
  "dep:urlencoding",
  "userp-pages?/account",
]
