[package]
name = "userp-axum"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"

[dependencies]
anyhow = { version = "1.0.89", optional = true }
async-trait = { version = "0.1.83", optional = true }
axum = { version = "0.7.7", features = ["macros"] }
axum-extra = { version = "0.9.4", features = ["cookie-private"] }
base64 = { version = "0.22.1", optional = true }
chrono = { version = "0.4.38", optional = true, features = ["serde"] }
lettre = { version = "0.11.9", optional = true }
oauth2 = { version = "4.4.2", optional = true }
password-auth = { version = "1.0.0", optional = true }
reqwest = { version = "0.12.8", features = ["json"], optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128", optional = true }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"], optional = true }
url = { version = "2.5.2", optional = true }
urlencoding = { version = "2.1.3", optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
userp-client = { path = "../userp-client", default-features = false }
userp-server = { path = "../userp-server", default-features = false }
userp-pages = { path = "../userp-pages", optional = true, default-features = false, features = [
  "axum",
] }

[features]
default = ["pages", "oauth", "password", "email", "account"]
pages = ["userp-pages", "dep:urlencoding"]
oauth = [
  "userp-client/oauth",
  "userp-server/oauth",
  "oauth-callbacks",
  "userp-pages?/oauth",
]
oauth-callbacks = [
  "userp-client/oauth-callbacks",
  "userp-server/oauth-callbacks",
  "dep:urlencoding",
]
password = [
  "userp-client/password",
  "userp-server/password",
  "dep:urlencoding",
  "userp-pages?/password",
]
email = [
  "userp-client/email",
  "userp-server/email",
  "dep:urlencoding",
  "userp-pages?/email",
]
account = [
  "userp-client/account",
  "userp-server/account",
  "dep:urlencoding",
  "userp-pages?/account",
]
