[package]
name = "userp-client"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[features]
default = ["account", "email", "password", "oauth"]
account = []
email = []
password = []
oauth-callbacks = []
oauth = ["oauth-callbacks"]
