[package]
name = "userp-pages"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"

[dependencies]
askama = { version = "0.12.1" }
askama_axum = { version = "0.4.0", optional = true }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
userp-server = { path = "../userp-server", default-features = false }
userp-client = { path = "../userp-client", default-features = false }

[features]
default = ["account", "email", "password", "oauth", "axum"]
axum = ["dep:askama_axum"]
account = ["userp-server/account", "userp-client/account"]
email = ["userp-server/email", "userp-client/email"]
password = ["userp-server/password", "userp-client/password"]
oauth = ["userp-server/oauth", "userp-client/oauth"]
