[package]
name = "userp"
version = "0.0.4"
edition = "2021"
exclude = [".github/*"]
description = "Userp is a user account system inspired by Next Auth, with OAuth, password and email support, a ready-made Axum router with Askama templates, and more on the way!"
license = "ISC"
repository = "https://github.com/StefanTerdell/userp"
homepage = "https://github.com/StefanTerdell/userp"


[dependencies]
userp-client = { path = "../userp-client", default-features = false }
userp-server = { path = "../userp-server", optional = true, default-features = false }
userp-pages = { path = "../userp-pages", optional = true, default-features = false }
userp-axum-router = { path = "../userp-axum-router", optional = true, default-features = false }

[features]
default = ["email", "password", "oauth", "account"]
email = [
  "userp-client/email",
  "userp-server?/email",
  "userp-axum-router?/email",
  "userp-pages?/email",
]
password = [
  "userp-client/password",
  "userp-server?/password",
  "userp-axum-router?/password",
  "userp-pages?/password",
]
oauth = [
  "oauth-callbacks",
  "userp-client/oauth",
  "userp-server?/oauth",
  "userp-axum-router?/oauth",
  "userp-pages?/oauth",
]
oauth-callbacks = [
  "userp-client/oauth-callbacks",
  "userp-server?/oauth-callbacks",
  "userp-axum-router?/oauth-callbacks",
]
account = [
  "userp-client/account",
  "userp-server?/account",
  "userp-axum-router?/account",
  "userp-pages?/account",
]
pages = ["userp-pages", "userp-axum-router?/pages"]
server = ["userp-server"]
server-axum = ["server", "userp-server/axum"]
axum-router = ["server-axum", "userp-axum-router"]
