[package]
name = "askama-example"
version = "0.1.0"
edition = "2021"

[dependencies]
axum-user = { path = "../../"}
axum = "0.7.7"
axum-extra = { version = "0.9.4", features = ["cookie-private"] }
axum-macros = "0.4.2"
chrono = "0.4.38"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
dotenv = "0.15.0"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

